Se agregan los estilos. EN el index se agreaga el navbar y se prepara el catalogo

--- a/index.html
+++ b/index.html
@@ -3,9 +3,75 @@
   <head>
     <meta charset="utf-8">
     <title>Automax S.A de C.V.</title>
+    <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <p>probando la conexion del server</p>
+    <!-- page -->
+    <div class="page">
+      <!-- navbar -->
+      <div class="navbar">
+        <h1>AUTOMAX</h1>
+        <span></span>
+        <a href="#">Contacto</a>
+        <a href="#">About</a>
+      </div>
+
+      <!-- descripcion -->
+      <div class="descripcion">
+        <h2>Hola! Somos Automax.<br>
+            Rentamos autos sedan al mejor precio!</h2>
+      </div>
+
+      <!-- catalogo -->
+      <div class="catalogo">
+        <h3>CARROS DISPONIBLES</h3>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+      </div>
+
+      <!-- <img class="car-photo"
+      src="https://s1.cdn.autoevolution.com/images/gallery/honda-civic-sedan-2021-7100_6.jpg"
+      alt="honda civic"> -->
+
+    </div>
+
 
 
 
