--- a/index.html
+++ b/index.html
@@ -23,52 +23,82 @@
       </div>
 
       <!-- catalogo -->
+      <h3 id="catalogo-titulo">CARROS DISPONIBLES</h3>
       <div class="catalogo">
-        <h3>CARROS DISPONIBLES</h3>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-        <br>
-      </div>
 
-      <!-- <img class="car-photo"
-      src="https://s1.cdn.autoevolution.com/images/gallery/honda-civic-sedan-2021-7100_6.jpg"
-      alt="honda civic"> -->
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/honda-civic-sedan-2021-7100_6.jpg"
+          alt="honda civic">
+          <p>Honda Civic Sedan 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/acura-tlx-2015-5368_106.jpg"
+          alt="acura tlx">
+          <p>Acura TLX 2020</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/ASTON-MARTIN-DBS-Superleggera-Volante-6572_9.jpg"
+          alt="aston martin superleggera">
+          <p>Aston Martin DBS Superleggera Volante 2019</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_17.jpg"
+          alt="audi a3">
+          <p>Audi A3 2020</p>
+        </div>
+
+
+
+      </div>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <p>TO BE COMPLETED</p>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+      <br>
+
+
 
     </div>
 
