Se agreaga un .gitignore para el ngrok, se agregan los 25 autos, se agrega el flex corregido, un media query para moviles y se le agrega flexibilidad al app.js con la leida de archivos distintos.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>Automax S.A de C.V.</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
     <!-- page -->
@@ -19,12 +19,124 @@
       <!-- descripcion -->
       <div class="descripcion">
         <h2>Hola! Somos Automax.<br>
-            Rentamos autos sedan al mejor precio!</h2>
+            Rentamos autos sedan/coupe al mejor precio!</h2>
       </div>
 
       <!-- catalogo -->
       <h3 id="catalogo-titulo">CARROS DISPONIBLES</h3>
       <div class="catalogo">
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_17.jpg"
+          alt="audi a3">
+          <p>Audi A3 2020</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_16.jpg"
+          alt="audi a4">
+          <p>Audi A4 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_33.jpg"
+          alt="audi a7">
+          <p>Audi A7 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/BMW-BMW-M4--F82--5086_10.jpg"
+          alt="bmw m4">
+          <p>BMW M4 2020</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/BMW-M8-Coupe-6590_26.jpg"
+          alt="bmw m8 coupe">
+          <p>BMW M8 Coupe 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/BMW-7-Series-6482_15.jpg"
+          alt="bmw 7 series">
+          <p>BMW 7 Series (G11) LCI 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/CHEVROLET-Corvette-Stingray-C8-6625_102.jpg"
+          alt="chevrolet corvette stingray c8">
+          <p>Chevrolet Corvette Stingray C8 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/CHEVROLET-Malibu-5398_14.jpg"
+          alt="chevrolet malibu">
+          <p>Chevrolet Malibu 2018</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/CHEVROLET-Camaro-ZL1-6319_1.jpg"
+          alt="chevrolet camaro zl1">
+          <p>Chevrolet Camaro ZL1 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/DODGE-Challenger-SRT-5362_84.jpg"
+          alt="dodge challenger srt">
+          <p>Dodge Challenger SRT 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/DODGE-Charger-SRT-Hellcat-6611_54.jpg"
+          alt="dodge charger srt">
+          <p>Dodge Charger SRT Hellcat 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/DODGE-SRT-Viper-4641_18.jpg"
+          alt="dodge srt viper">
+          <p>Dodge SRT Viper 2017</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/FORD-Fusion-6328_18.jpg"
+          alt="ford fusion">
+          <p>Ford Fusion 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/FORD-Mustang-6037_26.jpg"
+          alt="ford mustang">
+          <p>Ford Mustang 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/FORD-Mustang-Shelby-GT500-6483_53.jpg"
+          alt="ford mustang shelby gt500">
+          <p>Ford Mustang Shelby GT500 2021</p>
+        </div>
 
         <div class="carros">
           <img class="car-photo"
@@ -35,24 +147,80 @@
 
         <div class="carros">
           <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/acura-tlx-2015-5368_106.jpg"
-          alt="acura tlx">
-          <p>Acura TLX 2020</p>
+          src="https://s1.cdn.autoevolution.com/images/gallery/HONDA-Accord-6953_16.jpg"
+          alt="honda accord">
+          <p>Honda Accord 2021</p>
         </div>
 
         <div class="carros">
           <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/ASTON-MARTIN-DBS-Superleggera-Volante-6572_9.jpg"
-          alt="aston martin superleggera">
-          <p>Aston Martin DBS Superleggera Volante 2019</p>
+          src="https://s1.cdn.autoevolution.com/images/gallery/HONDA-NSX-5768_35.jpg"
+          alt="honda nsx">
+          <p>Honda NSX 2021</p>
         </div>
 
         <div class="carros">
           <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_17.jpg"
-          alt="audi a3">
-          <p>Audi A3 2020</p>
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/JAGUAR-XJR575-6064_6.jpg"
+          alt="jaguar xjr575">
+          <p>Jaguar XJR575 2021</p>
         </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/JAGUAR-XE-6519_37.jpg"
+          alt="jaguar xe">
+          <p>Jaguar XE 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/JAGUAR-F-Type-Coupe-6710_12.jpg"
+          alt="jaguar f-type coupe">
+          <p>Jaguar F-Type Coupe 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/mercedes-benz-cls-2021-7082_14.jpg"
+          alt="mercedes benz cls">
+          <p>Mercedes Benz CLS 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/MERCEDES-BENZ-E-Class--W213--6782_14.jpg"
+          alt="mercedes benz e-class">
+          <p>Mercedes Benz E-Class 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          src="https://s1.cdn.autoevolution.com/images/gallery/MERCEDES-BENZ-S-Class-Coupe--C217--6101_12.jpg"
+          alt="mercedes benz s-class">
+          <p>Mercedes Benz S-Class Coupe 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/MAZDA-3---Axela-Sedan-6446_5.jpg"
+          alt="mazda 3">
+          <p>Mazda 3 2021</p>
+        </div>
+
+        <div class="carros">
+          <img class="car-photo"
+          style="transform: scaleX(-1);"
+          src="https://s1.cdn.autoevolution.com/images/gallery/mazda-6-atenza-sedan-2018-6186_28.jpg"
+          alt="mazda 6">
+          <p>Mazda 6 2021</p>
+        </div>
+
+
+
 
 
 
