Seagregan mas queries para celulares

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
             Rentamos autos sedan/coupe al mejor precio!</h2>
       </div>
 
-      <!-- catalogo -->
+      <!-- catalogo adquirido de: https://www.autoevolution.com/cars/-->
       <h3 id="catalogo-titulo">CARROS DISPONIBLES</h3>
       <div class="catalogo">
 
@@ -219,59 +219,9 @@
           <p>Mazda 6 2021</p>
         </div>
 
-
-
-
-
-
       </div>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <p>TO BE COMPLETED</p>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-      <br>
-
-
 
     </div>
-
-
-
 
   </body>
 </html>
