Se agregaron algunos detalles de hover con sus animaciones, se comienza el trabajo de detalles

--- a/index.html
+++ b/index.html
@@ -3,6 +3,8 @@
   <head>
     <meta charset="utf-8">
     <title>Automax S.A de C.V.</title>
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Domine&display=swap" rel="stylesheet">
     <link rel="stylesheet" type="text/css" href="style.css">
   </head>
   <body>
@@ -26,12 +28,14 @@
       <h3 id="catalogo-titulo">CARROS DISPONIBLES</h3>
       <div class="catalogo">
 
-        <div class="carros">
-          <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_17.jpg"
-          alt="audi a3">
-          <p>Audi A3 2020</p>
-        </div>
+        <a style="text-decoration: none;" href="./detalleCarros/a3.html">
+          <div class="carros">
+            <img class="car-photo"
+            src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A3-Sedan-6806_17.jpg"
+            alt="audi a3">
+            <p>Audi A3 2020</p>
+          </div>
+        </a>
 
         <div class="carros">
           <img class="car-photo"
