se agrega un navbar fixed con botones mejorados

--- a/detalleCarros/a3.html
+++ b/detalleCarros/a3.html
@@ -14,8 +14,22 @@
 </head>
 <body>
     <div class="page">
-        
-        <h1>Audi A3 2021</h1>
+        <!-- navbar -->
+        <div id="real-navbar" class="navbar">
+            <a class="logo" href="/index.html"><h1>AUTOMAX</h1></a>
+            <span></span>
+            <a class="nav-link" href="#">Contacto</a>
+            <a style="padding-right: 5vw;" class="nav-link" href="#">About</a>
+        </div>
+
+        <!-- navbar de a mentis -->
+        <div class="navbar">
+            <a class="logo" href="#"><h1>AUTOMAX</h1></a>
+            <span></span>
+            <a class="nav-link" href="#">Contacto</a>
+            <a style="padding-right: 5vw;" class="nav-link" href="#">About</a>
+        </div>
+        <h1 id="car-name">Audi A3 2021</h1>
 
         <div class="photos">
         </div>
@@ -23,8 +37,8 @@
             <table>
                 <thead>
                     <tr>
-                        <th>SPEC</th>
-                        <th>DETAIL</th>
+                        <th>ESPECIFICACIONES</th>
+                        <th>DETALLE</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -151,6 +165,10 @@
                     <tr>
                         <td>CO2 EMISSIONS</td>
                         <td>114 g/km</td>
+                    </tr>
+                    <tr>
+                        <td class="price">PRECIO POR MES</td>
+                        <td class="price-tag">$349.99 (DOLARES)</td>
                     </tr>
                 </tbody>
             </table>
