--- a/index.html
+++ b/index.html
@@ -11,11 +11,19 @@
     <!-- page -->
     <div class="page">
       <!-- navbar -->
-      <div class="navbar">
-        <h1>AUTOMAX</h1>
+      <div id="real-navbar" class="navbar">
+        <a class="logo" href="/index.html"><h1>AUTOMAX</h1></a>
         <span></span>
-        <a href="#">Contacto</a>
-        <a href="#">About</a>
+        <a class="nav-link" href="#">Contacto</a>
+        <a style="padding-right: 5vw;" class="nav-link" href="#">About</a>
+      </div>
+
+      <!-- navbar de a mentis -->
+      <div class="navbar">
+        <a class="logo" href="#"><h1>AUTOMAX</h1></a>
+        <span></span>
+        <a class="nav-link" href="#">Contacto</a>
+        <a style="padding-right: 5vw;" class="nav-link" href="#">About</a>
       </div>
 
       <!-- descripcion -->
