SE agregaron las paginas de los 3 carros detallados completas.

--- a/detalleCarros/a3.html
+++ b/detalleCarros/a3.html
@@ -29,10 +29,11 @@
             <a class="nav-link" href="#">Contacto</a>
             <a style="padding-right: 5vw;" class="nav-link" href="#">About</a>
         </div>
-        <h1 id="car-name">Audi A3 2021</h1>
+        <h1 id="car-name">Audi A3 2020</h1>
 
-        <div class="photos">
+        <div class="photos-a3">
         </div>
+
         <div class="specs">
             <table>
                 <thead>
@@ -43,20 +44,20 @@
                 </thead>
                 <tbody>
                     <tr>
-                        <td class="title">ENGINE SPECS - 35 TFSI 6MT (150 HP)</td>
+                        <td class="title">MOTOR - 35 TFSI 6MT (150 HP)</td>
                         <td class="title"></td>
                     </tr>
 
                     <tr>
-                        <td>CYLINDERS</td>
+                        <td>CILINDROS</td>
                         <td>L4</td>
                     </tr>
                     <tr>
-                        <td>DISPLACEMENT</td>
+                        <td>DESPLAZAMIENTO</td>
                         <td>1498 cm3</td>
                     </tr>
                     <tr>
-                        <td>POWER</td>
+                        <td>PODER</td>
                         <td>110.3 KW @ 5000-6000 RPM<br>
                             150 HP @ 5000-6000 RPM <br>
                             148 BHP @ 5000-6000 RPM</td>
@@ -67,103 +68,103 @@
                             250 Nm @ 1500-3500 RPM</td>
                     </tr>
                     <tr>
-                        <td>FUEL SYSTEM</td>
+                        <td>SISTEMA DE COMBUSTION</td>
                         <td>Turbocharged Direct Injection</td>
                     </tr>
                     <tr>
-                        <td>FUEL</td>
+                        <td>COMBUSTIBLE</td>
                         <td>Gasoline</td>
                     </tr>
                     <tr>
-                        <td>FUEL CAPACITY</td>
+                        <td>CAPACIDAD DE COMBUSTIBLE</td>
                         <td>13.2 gallons (50.0 L)</td>
                     </tr>
                     <tr>
-                        <td class="title">PERFORMANCE SPECS</td>
+                        <td class="title">RENDIMIENTO</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>TOP SPEED</td>
+                        <td>VELOCIDAD MAXIMA</td>
                         <td>144 mph (232 km/h)</td>
                     </tr>
                     <tr>
-                        <td>ACCELERATION 0-62 MPH (0-100 KPH)</td>
+                        <td>ACELERACION 0-62 MPH (0-100 KPH)</td>
                         <td>8.4 s</td>
                     </tr>
                     <tr>
-                        <td class="title">TRANSMISSION SPECS</td>
+                        <td class="title">TRANSMISION</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>DRIVE TYPE</td>
+                        <td>TIPO</td>
                         <td>Front Wheel Drive</td>
                     </tr>
                     <tr>
-                        <td>GEARBOX</td>
+                        <td>CAJA DE CAMBIOS</td>
                         <td>6-Speed manual</td>
                     </tr>
                     <tr>
-                        <td class="title">BRAKES SPECS</td>
+                        <td class="title">FRENOS</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>FRONT</td>
+                        <td>FRONTALES</td>
                         <td>Ventilated Discs</td>
                     </tr>
                     <tr>
-                        <td>REAR</td>
+                        <td>TRASEROS</td>
                         <td>Ventilated Discs</td>
                     </tr>
                     <tr>
-                        <td class="title">TIRES SPECS</td>
+                        <td class="title">LLANTAS</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>TIRE SIZE</td>
+                        <td>TAMAÑO</td>
                         <td>205/55 R 16 91 V</td>
                     </tr>
                     <tr>
-                        <td class="title">DIMENSIONS</td>
+                        <td class="title">DIMENSIONES</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>LENGTH</td>
+                        <td>LONGITUD</td>
                         <td>177 in (4496 mm)</td>
                     </tr>
                     <tr>
-                        <td>WIDTH</td>
+                        <td>ANCHURA</td>
                         <td>71.5 in (1816 mm)</td>
                     </tr>
                     <tr>
-                        <td>HEIGHT</td>
+                        <td>ALTURA</td>
                         <td>56.1 in (1425 mm)</td>
                     </tr>
                     <tr>
-                        <td>FRONT/REAR TRACK</td>
+                        <td>TRACCION FRONTAL/TRASERA</td>
                         <td>61.2/60 in (1,554/1,524 mm)</td>
                     </tr>
                     <tr>
-                        <td>GROSS WEIGHT LIMIT</td>
+                        <td>PESO NETO</td>
                         <td>4045 lbs (1835 kg)</td>
                     </tr>
                     <tr>
-                        <td class="title">FUEL ECONOMY (NEDC)</td>
+                        <td class="title">ECONOMIA</td>
                         <td class="title"></td>
                     </tr>
                     <tr>
-                        <td>CITY</td>
+                        <td>CIUDAD</td>
                         <td>37.3 mpg US (6.3 L/100Km)</td>
                     </tr>
                     <tr>
-                        <td>HIGHWAY</td>
+                        <td>AUTOPISTA</td>
                         <td>56 mpg US (4.2 L/100Km)</td>
                     </tr>
                     <tr>
-                        <td>COMBINED</td>
+                        <td>COMBINADO</td>
                         <td>47 mpg US (5 L/100Km)</td>
                     </tr>
                     <tr>
-                        <td>CO2 EMISSIONS</td>
+                        <td>EMISIONES DE CO2</td>
                         <td>114 g/km</td>
                     </tr>
                     <tr>
