--- a/index.html
+++ b/index.html
@@ -45,19 +45,23 @@
           </div>
         </a>
 
-        <div class="carros">
-          <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_16.jpg"
-          alt="audi a4">
-          <p>Audi A4 2021</p>
-        </div>
+        <a style="text-decoration: none;" href="./detalleCarros/a4.html">
+          <div class="carros">
+            <img class="car-photo"
+            src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A4-6631_16.jpg"
+            alt="audi a4">
+            <p>Audi A4 2021</p>
+          </div>
+        </a>
 
-        <div class="carros">
-          <img class="car-photo"
-          src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_33.jpg"
-          alt="audi a7">
-          <p>Audi A7 2021</p>
-        </div>
+        <a style="text-decoration: none;" href="./detalleCarros/a7.html">
+          <div class="carros">
+            <img class="car-photo"
+            src="https://s1.cdn.autoevolution.com/images/gallery/AUDI-A7-Sportback-6152_33.jpg"
+            alt="audi a7">
+            <p>Audi A7 2021</p>
+          </div>
+        </a>
 
         <div class="carros">
           <img class="car-photo"
