--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -16,7 +16,7 @@
           <a href="#">Contacto</a>
           <a href="#">About</a>
         </div>
-  
+
         <h3 id="contacto-titulo">Contacto</h3>
         <div class="contacto">
             <a href="https://www.google.com/maps/place/Dababy+Sussy+Amongus+School/@53.9736987,-1.5549877,17z/data=!4m9!1m2!2m1!1sSoothill+Hall,+Ashville+College,+Green+Lane,+(Car+park+is+on),+Yew+Tree+Ln,+Harrogate+HG2+9JP,+Reino+Unido!3m5!1s0x4879514f07198377:0x500f79cd509598ca!8m2!3d53.9734981!4d-1.5530641!15sCmpTb290aGlsbCBIYWxsLCBBc2h2aWxsZSBDb2xsZWdlLCBHcmVlbiBMYW5lLCAoQ2FyIHBhcmsgaXMgb24pLCBZZXcgVHJlZSBMbiwgSGFycm9nYXRlIEhHMiA5SlAsIFJlaW5vIFVuaWRvkgEHY29sbGVnZQ">
@@ -24,7 +24,7 @@
             </a>
         </div>
         <div class="contacto">
-            
+
             <p>Dirección: Soothill Hall, Ashville College, Green Lane, (Car park is on), Yew Tree Ln, Harrogate HG2 9JP, Reino Unido</p>
         </div>
         <div class="contacto">
@@ -51,14 +51,14 @@
             </p>
             <p>
                 <label for="phone">Telefono:</label>
-                <input type="text" id="phone">
+                <input type="tel" id="phone">
             </p>
             <p>
                 <label for="email">Correo:</label>
-                <input type="text" id="email">
+                <input type="email" id="email">
             </p>
             <p>
-                <button onclick ="addContacto">Enviar</button>
+                <button onclick ="addContacto()">Enviar</button>
             </p>
         </div>
         <br>
