combine all part of proyecto in Juan brach before possible merge

--- a/contacto/contacto.html
+++ b/contacto/contacto.html
@@ -13,8 +13,8 @@
         <div class="navbar">
           <a href="../index.html"><h1>AUTOMAX</h1></a>
           <span></span>
-          <a href="#">Contacto</a>
-          <a href="#">About</a>
+          <a href="./contacto.html">Contacto</a>
+          <a href="../acerca_de/about.html">About</a>
         </div>
 
         <h3 id="contacto-titulo">Contacto</h3>
